fixed spacing issue

--- a/cs-projects/kanban/kanbanStyles.css
+++ b/cs-projects/kanban/kanbanStyles.css
@@ -4,19 +4,26 @@
     box-sizing: border-box;
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
+#headers {
+    height: 64px;
+}
+
+#headers h2 {
+    text-align: center;
+    float: left;
+    width: 18%;
+    margin: 0 1%;
 }
 
 .container {
-    width: 100px;
-    height: 100vh;
+    width: 18%;
+    height: 50vh;
     background-color: gainsboro;
     display: block;
     float: left;
-    margin-right: 10px;
+    margin: 0 1%;
     position: relative;
+    overflow: scroll;
 }
 
 .tasks {
@@ -26,7 +33,5 @@ body {
     position: absolute;
     display: block;
     z-index: 10;
-    padding-bottom: 10px;
-    left: 10%;
 }
 
